fix: removing this, to make the jump in and out stop on scrolling on mobile

--- a/style.css
+++ b/style.css
@@ -171,9 +171,3 @@ tbody{
     padding: 0;
   }
 }
-
-@media screen and (min-width: 500px) and (max-width: 683px) {
-  .fixed-pos {
-    width: 95%;
-  }
-}
